[package]
name = "serialize_k256_bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k256 = { version = "0.9", features = ["ecdsa", "zeroize"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
serde_json = "1.0.79"
zeroize = { version = "1.4", features = ["zeroize_derive"] }
ecdsa = { version = "0.12", features = ["digest", "arithmetic"], default-features = false } # needed only for FromDigest trait
elliptic-curve = {version = "0.10.0", features = ["arithmetic"]}
typenum = "1.15.0"
